--- a/src/globals.css
+++ b/src/globals.css
@@ -1,8 +1,10 @@
 :root {
-  --main-bg-color: rgb(130, 121, 255);
+  --main-bg-color: #17234e;
   --nav-bar-color: #1f3480;
-  --text-color: white;
-  --graph-bg-color: blue;
+  --text-color: rgb(231, 231, 231);
+  --graph-bg-color: rgb(255, 255, 255);
+  --graph-stroke: rgb(2, 238, 255);
+  --graph-fill-color: red;
 }
 
 #app {
@@ -15,17 +17,19 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 0 20px;
 }
 
 .newsCard {
-  background-color: gray;
-  align-items: center;
-  justify-content: center;
-  width: 30%;
+  color: var(--text-color);
   height: 50vh;
-  border-radius: 1ch;
-  padding: 5px;
+  padding: 20px;
   overflow-y: scroll;
+  background: rgba(255, 255, 255, 0.18);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .news-list {
@@ -48,10 +52,8 @@
 }
 
 .graph-container {
-  background-color: var(--graph-bg-color);
+  color: var(--text-color);
   font-size: 1rem;
-  border: 2px solid black;
-  border-radius: 5px;
   width: fit-content;
   height: fit-content;
   padding: 30px;
