--- a/src/globals.css
+++ b/src/globals.css
@@ -23,18 +23,38 @@
 .newsCard {
   color: var(--text-color);
   height: 50vh;
-  padding: 20px;
   overflow-y: scroll;
   background: rgba(255, 255, 255, 0.18);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .news-list {
-  align-items: center;
-  justify-content: center;
+  list-style: none;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.news-item {
+  border: 1px solid white;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  max-width: 80%;
+  text-align: center;
+  padding: 10px;
+}
+
+.news-link {
+  color: var(--text-color);
+}
+.news-link:hover {
+  color: rgb(114, 114, 114);
 }
 
 .navBar {
