--- a/src/globals.css
+++ b/src/globals.css
@@ -32,6 +32,11 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  max-width: 45%;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0;
 }
 
 .news-list {
