--- a/src/globals.css
+++ b/src/globals.css
@@ -18,21 +18,26 @@
   justify-content: space-around;
   align-items: center;
   padding: 0 20px;
+  height: 100%;
+  background-color: var(--main-bg-color);
 }
 
 .newsCard {
   color: var(--text-color);
   height: 50vh;
   overflow-y: scroll;
-  background: rgba(255, 255, 255, 0.18);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  background: #282828;
+  border-radius: 5px;
+  box-shadow: 0 4px 30px rgb(0, 0, 0);
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   max-width: 45%;
+  width: fit-content;
   overflow-x: hidden;
 }
 ::-webkit-scrollbar {
@@ -41,15 +46,19 @@
 
 .news-list {
   list-style: none;
-  width: 100%;
+  width: fit-content;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
 }
 
 .news-item {
   border: 1px solid white;
   margin-bottom: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
   max-width: 80%;
   text-align: center;
   padding: 10px;
@@ -70,6 +79,7 @@
   background-color: var(--nav-bar-color);
   width: 100%;
   color: var(--text-color);
+  height: 100px;
 }
 
 .dropdown {
@@ -86,12 +96,15 @@
 }
 
 #footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   color: var(--text-color);
-  position: fixed;
   background-color: var(--nav-bar-color);
   width: 100%;
   bottom: 0;
   left: 0;
   text-align: center;
-  min-height: 10vh;
+  height: 100px;
 }
