--- a/src/globals.css
+++ b/src/globals.css
@@ -22,7 +22,6 @@
   background-color: var(--main-bg-color);
 }
 
-
 .newsBox {
   display: flex;
   flex-direction: column;
@@ -100,8 +99,7 @@
 .graph-container {
   color: var(--text-color);
   font-size: 1rem;
-  width: fit-content;
-  height: fit-content;
+  height: 50vh;
   padding: 30px;
   margin: 10px;
 }
