Added custom graph tooltip

--- a/src/globals.css
+++ b/src/globals.css
@@ -104,6 +104,26 @@
   margin: 10px;
 }
 
+.custom-tooltip {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(40, 40, 40, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  padding: 10px;
+}
+
+.label {
+  margin: 0px;
+}
+
+.label-percent {
+  margin: 0px;
+  font-size: 24px;
+}
+
+
 #footer {
   display: flex;
   flex-direction: row;
