--- a/src/globals.css
+++ b/src/globals.css
@@ -9,7 +9,7 @@
 
 #app {
   width: 100%;
-  height: 100vh;
+  height: 78.5vh;
   background-color: var(--main-bg-color);
 }
 
@@ -38,11 +38,12 @@
   color: var(--text-color);
   height: 50vh;
   overflow-y: scroll;
-  background: #282828;
-  border-radius: 5px;
-  box-shadow: 0 4px 30px rgb(0, 0, 0);
+  background: #152047;
+  border-radius: 30px;
+  box-shadow: 
+    12px 12px 16px 0 rgba(0, 0, 0, 0.3),
+    -8px -8px 12px 0 rgba(57, 112, 138, 0.25);
   backdrop-filter: blur(5px);
-  border: 1px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -57,28 +58,41 @@
 .news-list {
   display: flex;
   list-style: none;
-
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 40px;
+  padding-top: 10px;
   margin: 0px;
-  gap: 30px;
+  gap: 5px;
 }
 
 .news-item {
   display: flex;
   flex-direction: column;
-  border: 1px solid white;
-  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.288);
+  border-radius: 10px;
+  box-shadow: 
+    12px 12px 16px 0 rgba(0, 0, 0, 0.10),
+    -8px -8px 12px 0 rgba(57, 112, 138, 0.10);
+  transition-timing-function: ease-out;
+  transition: 0.25s;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.news-item:hover{
+  box-shadow: 
+    12px 12px 16px 0 rgba(0, 0, 0, 0.3),
+    -8px -8px 12px 0 rgba(57, 112, 138, 0.3);
 }
 
 .news-link {
   color: var(--text-color);
+  text-decoration: none;
 }
-.news-link:hover {
-  color: rgb(114, 114, 114);
-}
+
+
 
 .navBar {
   display: flex;
