--- a/src/globals.css
+++ b/src/globals.css
@@ -7,6 +7,10 @@
   --graph-fill-color: red;
 }
 
+body{
+  background-color: var(--main-bg-color);
+}
+
 #app {
   width: 100%;
   height: 78.5vh;
@@ -34,7 +38,7 @@
   margin: 0px;
   padding: 0px;
   transition-timing-function: ease-out;
-  transition: 0.25s;
+  transition: 0.4s;
 }
 
 .newsCard {
@@ -43,8 +47,7 @@
   overflow-y: scroll;
   background: #152047;
   border-radius: 30px;
-  box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.3),
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.3),
     -8px -8px 12px 0 rgba(57, 112, 138, 0.25);
   backdrop-filter: blur(5px);
   display: flex;
@@ -75,18 +78,16 @@
   flex-direction: column;
   border: 1px solid rgba(255, 255, 255, 0.288);
   border-radius: 10px;
-  box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.10),
-    -8px -8px 12px 0 rgba(57, 112, 138, 0.10);
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.1),
+    -8px -8px 12px 0 rgba(57, 112, 138, 0.1);
   transition-timing-function: ease-out;
   transition: 0.25s;
   padding-left: 10px;
   padding-right: 10px;
 }
 
-.news-item:hover{
-  box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.3),
+.news-item:hover {
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.3),
     -8px -8px 12px 0 rgba(57, 112, 138, 0.3);
 }
 
@@ -94,8 +95,6 @@
   color: var(--text-color);
   text-decoration: none;
 }
-
-
 
 .navBar {
   display: flex;
@@ -115,10 +114,9 @@
   border-radius: 10px;
   font-size: 18px;
   padding: 10px;
-  border-color: rgba(255, 255, 255, 0.288);
-  box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.10),
-    -8px -8px 12px 0 rgba(57, 112, 138, 0.10);
+  border-color: rgba(255, 255, 255, 0);
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.1);
 }
 
 .dropdown {
@@ -132,6 +130,8 @@
   width: 40vw;
   padding: 30px;
   margin: 10px;
+  transition-timing-function: ease-out;
+  transition: 0.4s;
 }
 
 #footer {
@@ -147,4 +147,5 @@
   text-align: center;
   height: 100px;
   border-top: 1px solid rgba(0, 0, 0, 0.3);
+  position: absolute;
 }
