--- a/src/globals.css
+++ b/src/globals.css
@@ -146,5 +146,5 @@ body {
   left: 0;
   text-align: center;
   border-top: 1px solid rgba(0, 0, 0, 0.3);
-  position: absolute;
+  position: fixed;
 }
