--- a/src/globals.css
+++ b/src/globals.css
@@ -41,6 +41,11 @@ body {
   transition: 0.4s;
 }
 
+.news-box-open {
+  opacity: 0;
+  margin-left: -100vw;
+}
+
 .newsCard {
   color: var(--text-color);
   height: 50vh;
@@ -115,7 +120,13 @@ body {
   font-size: 18px;
   padding: 10px;
   border-color: rgba(255, 255, 255, 0);
-  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(57, 112, 138, 0.25);
+}
+
+.button-off {
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.1),
     inset -6px -6px 10px 0 rgba(255, 255, 255, 0.1);
 }
 
@@ -152,7 +163,6 @@ body {
   margin: 0px;
   font-size: 24px;
 }
-
 
 #footer {
   display: flex;
